# catt

./: .gitignore  LICENSE  README.md  bw2ar.py  catt_models_onnx.py  char_bert_dataset.py  char_bert_pl.py  char_bert_tokenizer.py  compute_der.py  ed.py  ed_pl.py  eo.py  eo_pl.py  export_to_onnx.py  model.py  predict_catt.py  predict_ed.py  predict_eo.py  pyproject.toml  requirements.txt  run_onnx.py  tashkeel_dataset.py  tashkeel_tokenizer.py  tashkeel_tokenizer_onnx.py  train_catt.py  train_char_bert.py  transformer.py  utils.py  xer.py
api/: catt_service.py  main.py  models.py
benchmarking/: run_compute_der_all_CATT_benchmark.sh  run_compute_der_all_WikiNews_benchmark.sh  run_compute_der_eo_ed_mlm_ns_long_training.sh  run_compute_der_eo_ed_mlm_ns_short_training.sh
benchmarking/all_models_CATT_data/: CATT_data_CBHG_output_200K.txt  CATT_data_Command_R_Plus_fixed.txt  CATT_data_Farasa_output.txt  CATT_data_GPT4_output_fixed.txt  CATT_data_Mishkal_output.txt  CATT_data_Multilevel_diacritizer.txt  CATT_data_Sakhr_output.txt  CATT_data_Shakkala_output.txt  CATT_data_TashkeelAlkhalil_output.txt  CATT_data_deep_diacritization_d2_output.txt  CATT_data_deep_diacritization_d3_output.txt  CATT_data_gt.txt  CATT_data_gt_no_tashkeel.txt
benchmarking/all_models_WikiNews_data/: WikiNews_data_CBHG_200K_output.txt  WikiNews_data_Command_R_Plus_v2.txt  WikiNews_data_Farasa_output.txt  WikiNews_data_GPT4_output.txt  WikiNews_data_Mishkal_output.txt  (+7 more)
catt/: __init__.py
catt/models/: model_types.py  (+3 more)
configs/: EncoderDecoder_config.yaml  EncoderOnly_config.yaml  Sample_config.yaml
(+28 files in other folders)
