[tool.poetry]
name = "catt"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kaldialign = "0.9.1"
numpy = "1.26.4"
pytorch-lightning = "2.0.7"
fastapi = "^0.112.0"
pydantic = "^2.8.2"
uvicorn = "^0.30.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
